--- a/src/main/resources/templates/candidate/jobs.html
+++ b/src/main/resources/templates/candidate/jobs.html
@@ -28,20 +28,23 @@
         </form>
 
         <div class="container mx-auto mt-8">
+            <form th:action="@{/candidate/jobs/apply}" method="post">
+                <div th:each="job:${jobs}" class="text-gray-100 bg-gray-800 p-8 rounded-lg p-4 mb-4 shadow-md text-justify">
 
-            <div th:each="job:${jobs}" class="text-gray-100 bg-gray-800 p-8 rounded-lg p-4 mb-4 shadow-md text-justify">
+                    <input type="hidden" name="jobId" th:value="${job.id}">
 
-                <h3 th:text="${job.name}" class="font-bold block mb-4">Job Name</h3>
+                    <h3 th:text="${job.name}" class="font-bold block mb-4">Job Name</h3>
 
-                <span class="font-bold">Description: </span>
-                <span th:text="${job.description}" class="block mb-4"></span>
-                <span class="font-bold">Benefits: </span>
-                <span th:text="${job.benefits}" class="block mb-4"></span>
-                <span class="font-bold">Level: </span>
-                <span th:text="${job.level}" class="block mb-4"></span>
-                <button class="font-bold bg-blue-800 text-gray-100 px-4 py-2 rounded hover:bg-blue-500  mt-8">Candidatar-se</button>
-    
-            </div>
+                    <span class="font-bold">Description: </span>
+                    <span th:text="${job.description}" class="block mb-4"></span>
+                    <span class="font-bold">Benefits: </span>
+                    <span th:text="${job.benefits}" class="block mb-4"></span>
+                    <span class="font-bold">Level: </span>
+                    <span th:text="${job.level}" class="block mb-4"></span>
+                    <button class="font-bold bg-blue-800 text-gray-100 px-4 py-2 rounded hover:bg-blue-500  mt-8">Candidatar-se</button>
+        
+                </div>
+            </form>
         
     </div>
 
