add Cadastrar Candidato

--- a/src/main/resources/templates/candidate/login.html
+++ b/src/main/resources/templates/candidate/login.html
@@ -22,7 +22,7 @@
                 class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-2 focus:ring-blue-500"
                 placeholder="Password">
             <button class="bg-blue-800 text-gray-100 w-96 p-3 rounded hover:bg-blue-500">Sign in</button>
-            <a href="" class="text-center text-blue-800 underline underline-offset-2 block hover:text-blue-500"> Create your account </a>
+            <a href="/candidate/create" class="text-center text-blue-800 underline underline-offset-2 block hover:text-blue-500"> Create your account </a>
         </div>
     </form>
     
