--- a/src/main/resources/templates/candidate/create.html
+++ b/src/main/resources/templates/candidate/create.html
@@ -30,6 +30,7 @@
                 placeholder="Repeat your password">
             <textarea name="description" th:field="*{description}" class="bg-gray-100 text-gray-900 text-xd rounded w-96 block p-3 focus:outline-none focus:ring-2 focus:ring-blue-500"
             placeholder="About you..."></textarea>
+            <p class="text-red-400" th:if="${error_message}" th:text="${error_message}"></p>
             <button class="bg-blue-800 text-gray-100 w-96 p-3 rounded hover:bg-blue-500">Sign up</button>
             <a href="/candidate/login" class="text-center text-blue-800 underline underline-offset-2 block hover:text-blue-500"> Login </a>
         </div>
